syntax = "proto3";

package go.micro.srv.PostLogin;

service Example {
	rpc PostLogin(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Mobile = 1;
	string Password = 2;
}

message Response {
	string Errno = 1;
	string ErrMsg = 2;
	string Sessionid = 3;
}
